<resources>
    <string name="app_name">DiceRoller</string>
    <string name="modificador_soma">0</string>
    <string name="modificador_multiplica">1</string>
    <string name="texto_rolagem">Rolando %dd%d+%d =</string>
    <string name="resultado_inicial">0</string>
    <string name="multiplicador_de_dados">Multiplicador de Dados:</string>
    <string name="somar_valor">Somar valor:</string>
    <string name="dado_1d4">1D4</string>
    <string name="dado_1d6">1D6</string>
    <string name="dado_1d8">1D8</string>
    <string name="dado_1d10">1D10</string>
    <string name="dado_1d12">1D12</string>
    <string name="dado_1d20">1D20</string>
    <string name="dado_1d100">1D100</string>
    <string name="about_trilhavnt_android">TrilhaVNT Android</string>
    <string name="about_diceroller_app">Diceroller APP</string>
    <string name="about_vntvisi_venturus">vntvisi@Venturus</string>
    <string name="desafio_intent">Desafio Intent</string>
    <string name="desafio_fragment">Desafio Fragment</string>
    <string name="dica_digite_um_texto">Digite um texto</string>
    <string name="botao_envia_texto">Envie esse texto para outro app</string>
    <string name="dica_first_fragment">Insira um texto qualquer aqui</string>
    <string name="fragment_button">Go to second fragment</string>
    <string name="botao_incrementa">Increment</string>
    <string name="desafio_rotacao_de_tela">Desafio Rotação de Tela</string>
    <string name="titulo_about">About</string>
    <string name="desafio_recyclerview">Desafio RecyclerView</string>
    <string name="desafio_shared_preferences">Desafio SharedPreferences</string>
</resources>