<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <TextView
        android:id="@+id/about_trilha_vnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_trilhavnt_android"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/about_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_diceroller_app"
        app:layout_constraintStart_toStartOf="@id/about_trilha_vnt"
        app:layout_constraintTop_toBottomOf="@id/about_trilha_vnt"/>

    <TextView
        android:id="@+id/about_devname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_vntvisi_venturus"
        app:layout_constraintStart_toStartOf="@id/about_trilha_vnt"
        app:layout_constraintTop_toBottomOf="@id/about_appname"/>
</androidx.constraintlayout.widget.ConstraintLayout>